# smarteps

./: .gitignore  FINAL_STATUS.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: help.html  privacy_policy.html
app/src/main/cpp/: CMakeLists.txt  ghostscript_jni.cpp
app/src/main/jniLibs/: README.md
app/src/main/res/drawable/: ic_export.xml  ic_folder.xml  ic_help.xml  ic_history.xml  ic_settings.xml  ic_star.xml
app/src/main/res/layout/: activity_help.xml  activity_home.xml  activity_premium.xml  activity_settings.xml  activity_viewer.xml  fragment_convert.xml  fragment_profile.xml  fragment_viewer.xml
app/src/main/res/menu/: bottom_navigation_menu.xml  menu_viewer.xml
app/src/main/res/mipmap-anydpi-v33/: ic_launcher.xml
docs/: 00_READ_ME_FIRST.txt  BOTTOM_NAVIGATION_COMPLETE.md  BUILD_SUCCESS.md  CHANGELOG.md  COMPLETE_RENDERING_SOLUTION.md  CRASH_FIXES_COMPLETE.md  DELIVERY.md  DEPENDENCY_FIX.md  EPS_INTEGRATION_GUIDE.md  EPS_RENDERING_FIXED.md  FILE_INDEX.md  GHOSTSCRIPT_INTEGRATION.md  GHOSTSCRIPT_QUICK_REFERENCE.md  GHOSTSCRIPT_SUMMARY.md  GRADLE_CHECKSUM_FIXED.md  GRADLE_FINAL_FIX.md  GRADLE_FIX.md  GRADLE_FIX_QUICK.txt  HOW_TO_ADD_EPS_FILES_TO_EMULATOR.md  LICENSE  LOADING_INDICATOR_ADDED.md  POSTSCRIPT_INTERPRETER.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REPOSITORY_FIX.md  START_HERE.md  TIMBER_VERSION_FIX.md  USER_IMPROVEMENTS_COMPLETE.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+41 files in other folders)
